# fp-homeworks

./: LICENSE  p  stack.yaml
.github/classroom/: autograding.json
hw0/: hw0.cabal
hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
hw1/: hw1.cabal
hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
hw2/: LICENSE  hw2.cabal
hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
