name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Kurdyukov Kirll
maintainer:          kurdyukov_kirya@mail.ru
copyright:           2021 Kurdyukov Kirill

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
       HW3.Action
       HW3.Base
       HW3.Evaluator
       HW3.Parser
       HW3.Pretty
  ghc-options:         -Wall
  build-depends:
      base >= 4.9 && < 5
    , bytestring
    , containers
    , directory
    , haskeline
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , prettyprinter-ansi-terminal
    , random
    , scientific
    , serialise
    , text
    , time
    , transformers
    , zlib
  default-language:    Haskell2010
